# build123d-examples

./: .gitignore  README.md  cylinder_on_side.py  h.py  h_jupyter.py  hello-world.py  justfile  perpetual-ring-calendar.py  pyproject.toml  ring-calendar-ai.py  ring-calendar.py  text-on-curve.py  track.py
examples/: box-lid.py  h.py  hello-world.py  knob.py  ring-calendar.py  text-on-curve.py  vacuum-holder-top.py  wifi-symbol.py
fundamentals/: curved-slot.py  locations.py  sort-filter-group-by.py
scripts/: to_jupyter.py
